Use protocol-relative URL

--- a/blank.html
+++ b/blank.html
@@ -6,7 +6,7 @@
   <body>
     <p>Note: Widget will render in bottom-right of this screen.</p>
 
-    <script src="http://cdn.trellisconnect.com/sdk/v1.1/trellis-connect.js"></script>
+    <script src="://cdn.trellisconnect.com/sdk/v1.1/trellis-connect.js"></script>
     <script src="./widget.js"></script>
     <script>
       TrellisAssistant.configure({
