Replace key with Noblr

--- a/blank.html
+++ b/blank.html
@@ -10,12 +10,12 @@
     <script src="./widget.js"></script>
     <script>
       TrellisAssistant.configure({
-        clientId: 'CHALLENGE',
+        clientId: "2658b6b2-551d-4f67-a75c-b767c24f7bb8",
         messages: {
-          initial: 'Already insured? Easily get your VIN by logging in with your current policy.',
-          loading: 'Loading your policy information...',
-          success: 'Your information is ready! Tap to check your current policy information.',
-          error: 'An error has occurred. We are looking into it. Sorry this didn’t work.'
+          initial: "Already insured? Easily get your VIN by logging in with your current policy.",
+          loading: "Loading your policy information...",
+          success: "Your information is ready! Tap to check your current policy information.",
+          error: "An error has occurred. We are looking into it. Sorry this didn’t work."
         }
       });
     </script>
